[gd_scene load_steps=5 format=2]

[ext_resource path="res://Character/Enemy/enem_XY_AI.gd" type="Script" id=1]
[ext_resource path="res://XY_A_BOSS/boss.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.0148, 19.9782 )

[node name="enemAI" type="KinematicBody2D"]
position = Vector2( 51.9723, 68.2357 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 10.0365, 0.629762 )
scale = Vector2( 0.280509, 0.382992 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.06065, 2.12132 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Position2D1" type="Position2D" parent="."]
position = Vector2( -40.305, 2.12132 )
scale = Vector2( 4, 4 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 29.3449, 2.47488 )
scale = Vector2( 4, 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
